@@ -3,6 +3,8 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
+- method handlers broken?
+
 - @PerlSetVar core dumps outside of %Location (Ask)
 
 - turn of strip of httpd in Apache's install.sh
